--- a/Vader.ipynb
+++ b/Vader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "8c915176",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "4d8f3119",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package vader_lexicon to\n",
-      "[nltk_data]     C:\\Users\\Christina\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\S.Z\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
      ]
     },
@@ -34,7 +34,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "2e19a774",
    "metadata": {},
    "outputs": [],
@@ -58,18 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "b1fe18b0",
    "metadata": {},
    "outputs": [],
    "source": [
     "#read in data\n",
-    "data = pd.read_csv('0819_UkraineCombinedTweetsDeduped.csv')"
+    "data = pd.read_csv('Resources/0819_UkraineCombinedTweetsDeduped.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "c3d7367e",
    "metadata": {
     "scrolled": true
@@ -298,7 +298,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "5472a2ab",
    "metadata": {},
    "outputs": [],
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "b3c7c02d",
    "metadata": {
     "scrolled": true
@@ -688,7 +688,7 @@
        "[47994 rows x 17 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "15845b04",
    "metadata": {},
    "outputs": [
@@ -898,7 +898,7 @@
        "4       False                  0  2022-08-19 11:52:29.448634  No Popularity  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "9ab281aa",
    "metadata": {},
    "outputs": [],
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "26e030ca",
    "metadata": {},
    "outputs": [],
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "f14ce7ca",
    "metadata": {},
    "outputs": [],
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "4b864453",
    "metadata": {},
    "outputs": [
@@ -1385,7 +1385,7 @@
        "[47994 rows x 21 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "57daa771",
    "metadata": {},
    "outputs": [
@@ -1419,7 +1419,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "9405d23e",
    "metadata": {},
    "outputs": [
@@ -1450,7 +1450,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1462,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "bba4f7a5",
    "metadata": {},
    "outputs": [
@@ -1493,6 +1493,299 @@
     "# Show the classification report\n",
     "print(classification_report(data_df['dominant_sentiment'], data_df['sentiment_category']))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1fe03f80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>userid</th>\n",
+       "      <th>username</th>\n",
+       "      <th>following</th>\n",
+       "      <th>followers</th>\n",
+       "      <th>totaltweets</th>\n",
+       "      <th>usercreatedts</th>\n",
+       "      <th>tweetid</th>\n",
+       "      <th>tweetcreatedts</th>\n",
+       "      <th>retweetcount</th>\n",
+       "      <th>...</th>\n",
+       "      <th>hashtags</th>\n",
+       "      <th>language</th>\n",
+       "      <th>favorite_count</th>\n",
+       "      <th>is_retweet</th>\n",
+       "      <th>original_tweet_id</th>\n",
+       "      <th>extractedts</th>\n",
+       "      <th>Popularity</th>\n",
+       "      <th>polarity_score</th>\n",
+       "      <th>sentiment_category</th>\n",
+       "      <th>dominant_sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>173212647</td>\n",
+       "      <td>JoeMokolobetsi</td>\n",
+       "      <td>219</td>\n",
+       "      <td>197</td>\n",
+       "      <td>4789</td>\n",
+       "      <td>2010-07-31 19:09:22.000000</td>\n",
+       "      <td>1560416252937617411</td>\n",
+       "      <td>2022-08-19 00:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[{'text': 'Pfizer', 'indices': [189, 196]}, {'...</td>\n",
+       "      <td>en</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2022-08-19 08:07:26.836769</td>\n",
+       "      <td>No Popularity</td>\n",
+       "      <td>-0.6757</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>335041409</td>\n",
+       "      <td>XclusivasPuebla</td>\n",
+       "      <td>1419</td>\n",
+       "      <td>6402</td>\n",
+       "      <td>70267</td>\n",
+       "      <td>2011-07-14 02:02:24.000000</td>\n",
+       "      <td>1560416256179707904</td>\n",
+       "      <td>2022-08-19 00:00:01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[{'text': 'Mundo', 'indices': [0, 6]}, {'text'...</td>\n",
+       "      <td>es</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2022-08-19 07:51:50.523048</td>\n",
+       "      <td>No Popularity</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1512400441103032323</td>\n",
+       "      <td>ShelterAnimalUA</td>\n",
+       "      <td>782</td>\n",
+       "      <td>109</td>\n",
+       "      <td>1198</td>\n",
+       "      <td>2022-04-08 12:02:47.000000</td>\n",
+       "      <td>1560416257752666113</td>\n",
+       "      <td>2022-08-19 00:00:01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[{'text': 'Ukraine', 'indices': [189, 197]}, {...</td>\n",
+       "      <td>en</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2022-08-19 05:12:06.194216</td>\n",
+       "      <td>No Popularity</td>\n",
+       "      <td>0.4574</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1356632630662430722</td>\n",
+       "      <td>DogandCatHelpe1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>39</td>\n",
+       "      <td>690</td>\n",
+       "      <td>2021-02-02 15:57:12.000000</td>\n",
+       "      <td>1560416257790382081</td>\n",
+       "      <td>2022-08-19 00:00:01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[{'text': 'Ukraine', 'indices': [194, 202]}, {...</td>\n",
+       "      <td>en</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2022-08-19 11:22:26.824532</td>\n",
+       "      <td>No Popularity</td>\n",
+       "      <td>0.7418</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>20297125</td>\n",
+       "      <td>ElMananaOnline</td>\n",
+       "      <td>2269</td>\n",
+       "      <td>17978</td>\n",
+       "      <td>56188</td>\n",
+       "      <td>2009-02-07 06:32:49.000000</td>\n",
+       "      <td>1560416257937051648</td>\n",
+       "      <td>2022-08-19 00:00:01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[{'text': 'Rusia', 'indices': [22, 28]}, {'tex...</td>\n",
+       "      <td>es</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2022-08-19 11:52:29.448634</td>\n",
+       "      <td>No Popularity</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>neutral</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0               userid         username  following  followers  \\\n",
+       "0           0            173212647   JoeMokolobetsi        219        197   \n",
+       "1           1            335041409  XclusivasPuebla       1419       6402   \n",
+       "2           2  1512400441103032323  ShelterAnimalUA        782        109   \n",
+       "3           3  1356632630662430722  DogandCatHelpe1          5         39   \n",
+       "4           4             20297125   ElMananaOnline       2269      17978   \n",
+       "\n",
+       "   totaltweets               usercreatedts              tweetid  \\\n",
+       "0         4789  2010-07-31 19:09:22.000000  1560416252937617411   \n",
+       "1        70267  2011-07-14 02:02:24.000000  1560416256179707904   \n",
+       "2         1198  2022-04-08 12:02:47.000000  1560416257752666113   \n",
+       "3          690  2021-02-02 15:57:12.000000  1560416257790382081   \n",
+       "4        56188  2009-02-07 06:32:49.000000  1560416257937051648   \n",
+       "\n",
+       "        tweetcreatedts  retweetcount  ...  \\\n",
+       "0  2022-08-19 00:00:00             0  ...   \n",
+       "1  2022-08-19 00:00:01             0  ...   \n",
+       "2  2022-08-19 00:00:01             0  ...   \n",
+       "3  2022-08-19 00:00:01             0  ...   \n",
+       "4  2022-08-19 00:00:01             0  ...   \n",
+       "\n",
+       "                                            hashtags language favorite_count  \\\n",
+       "0  [{'text': 'Pfizer', 'indices': [189, 196]}, {'...       en              0   \n",
+       "1  [{'text': 'Mundo', 'indices': [0, 6]}, {'text'...       es              0   \n",
+       "2  [{'text': 'Ukraine', 'indices': [189, 197]}, {...       en              1   \n",
+       "3  [{'text': 'Ukraine', 'indices': [194, 202]}, {...       en              2   \n",
+       "4  [{'text': 'Rusia', 'indices': [22, 28]}, {'tex...       es              0   \n",
+       "\n",
+       "   is_retweet  original_tweet_id                 extractedts     Popularity  \\\n",
+       "0       False                  0  2022-08-19 08:07:26.836769  No Popularity   \n",
+       "1       False                  0  2022-08-19 07:51:50.523048  No Popularity   \n",
+       "2       False                  0  2022-08-19 05:12:06.194216  No Popularity   \n",
+       "3       False                  0  2022-08-19 11:22:26.824532  No Popularity   \n",
+       "4       False                  0  2022-08-19 11:52:29.448634  No Popularity   \n",
+       "\n",
+       "  polarity_score  sentiment_category dominant_sentiment  \n",
+       "0        -0.6757            negative            neutral  \n",
+       "1         0.0000             neutral            neutral  \n",
+       "2         0.4574            positive            neutral  \n",
+       "3         0.7418            positive            neutral  \n",
+       "4         0.0000             neutral            neutral  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f6842832",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0               int64\n",
+       "userid                   int64\n",
+       "username                object\n",
+       "following                int64\n",
+       "followers                int64\n",
+       "totaltweets              int64\n",
+       "usercreatedts           object\n",
+       "tweetid                  int64\n",
+       "tweetcreatedts          object\n",
+       "retweetcount             int64\n",
+       "text                    object\n",
+       "hashtags                object\n",
+       "language                object\n",
+       "favorite_count           int64\n",
+       "is_retweet                bool\n",
+       "original_tweet_id        int64\n",
+       "extractedts             object\n",
+       "Popularity            category\n",
+       "polarity_score         float64\n",
+       "sentiment_category      object\n",
+       "dominant_sentiment      object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check the datatypes\n",
+    "data_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "31abd6b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export the DataFrame as a CSV file. \n",
+    "data_df.to_csv(\"Resources/data_df.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71dd37b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1511,7 +1804,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
